# airflow-variable-json-viewer

./: .gitignore  README.md  pyproject.toml
variable_json_viewer/: __init__.py  plugin.py
variable_json_viewer/static/: app.js  index.html  styles.css
